update with more features
